# unifdf

./: CMakeLists.txt  Makefile  MakefileUNIX  README.md  a.out  action.c  color.h  errors.h  events.c  fdf  fdf.h  get_map.c  get_next_line.h  getmap.c  gradient.c  init.c  keyboard.c  list_hand.c  main.c  mem_free.c  mouse.c  parser.c  projection.c  put_line.c  put_lines.c  rotate.c  strspl.c  t  vec_handle.c
22/: ft_atoi.c  ft_isalnum.c  ft_islower.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_memalloc.c  ft_memdel.c  ft_putnbr_fd.c  ft_strchr.c  ft_strclr.c  ft_strmap.c  ft_strnew.c  ft_strrev.c  ft_strsub.c  libft.h
XLSparce/: XLSParce.c  example.xls
fdf/: .fdf.h.swp  .mane.c.swp  .projection.c.swp  a.out  fdf.h  mane.c  projection.c  put_line.c  put_segment.c
gnl/: get_next_line.c
includes/: color.h  errors.h  fdf.h  get_next_line.h
libft/: Makefile  author  ft_bzero.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putnbr.c  ft_putstr_fd.c  ft_strcat.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strnequ.c  ft_strnstr.c  ft_strrchr.c  ft_strrev.c  ft_strsplit.c  ft_strstr.c  ft_tolower.c  (+2 more)
maps/: islam.fdf  sasat.fdf  tits.fdf
new_br/: .fdf.h.swp  .main.c.swp  action.c  drawing.c  errors.h  fdf.h  get_map.c  gradient.c  init.c  list_hand.c  main.c  parser.c  projection.c  (+2 more)
(+45 files in other folders)
